--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -5,6 +5,8 @@ repos:
       - id: check-yaml
       - id: end-of-file-fixer
       - id: trailing-whitespace
+      - id: pretty-format-json
+        args: [--autofix, --no-sort-keys]
   - repo: https://github.com/pre-commit/mirrors-clang-format
     rev: 'v14.0.0'  # The default in Ubuntu 22.04, which is used in our CI
     hooks:
