- added some simple macros for assert checking - added linking to cpptrace

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -38,4 +38,4 @@ enable_sanitizers(
   NeoFOAM NEOFOAM_ENABLE_SANITIZE_ADDRESS NEOFOAM_ENABLE_SANITIZE_LEAK NEOFOAM_ENABLE_SANITIZE_UB
   NEOFOAM_ENABLE_SANITIZE_THREAD NEOFOAM_ENABLE_SANITIZE_MEMORY)
 
-target_link_libraries(NeoFOAM PRIVATE Kokkos::kokkos)
+target_link_libraries(NeoFOAM PRIVATE Kokkos::kokkos cpptrace::cpptrace)
