--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -28,4 +28,12 @@ enable_sanitizers(
   NEOFOAM_ENABLE_SANITIZE_UB NEOFOAM_ENABLE_SANITIZE_THREAD
   NEOFOAM_ENABLE_SANITIZE_MEMORY)
 
+if(${CMAKE_BUILD_TYPE} MATCHES Debug)
+  target_compile_definitions(NeoFOAM INTERFACE NF_DEBUG)
+endif()
+
+if(${CMAKE_BUILD_TYPE} MATCHES RelWithDebInfo)
+  target_compile_definitions(NeoFOAM INTERFACE NF_DEBUG_INFO)
+endif()
+
 target_link_libraries(NeoFOAM PRIVATE Kokkos::kokkos cpptrace::cpptrace)
