- Reverted inclusion approach of cpptrace in CMakeLists.txt

--- a/applications/solver/minimal/CMakeLists.txt
+++ b/applications/solver/minimal/CMakeLists.txt
@@ -12,4 +12,4 @@ endif()
 
 add_executable(minimalFoam "minimal.cpp")
 
-target_link_libraries(minimalFoam PUBLIC NeoFOAM)
+target_link_libraries(minimalFoam PUBLIC NeoFOAM cpptrace::cpptrace)
