--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -6,3 +6,4 @@ list(APPEND CMAKE_MODULE_PATH ${catch2_SOURCE_DIR}/extras)
 add_subdirectory(core)
 add_subdirectory(fields)
 add_subdirectory(mesh)
+add_subdirectory(finiteVolume)
