- first inclusion of a compiling MPI in source.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -6,8 +6,10 @@ add_library(NeoFOAM)
 include(GNUInstallDirs)
 
 target_include_directories(
-  NeoFOAM PUBLIC "$<BUILD_INTERFACE:${PROJECT_SOURCE_DIR}/include>"
-                 "$<INSTALL_INTERFACE:${CMAKE_INSTALL_FULL_INCLUDEDIR}>")
+  NeoFOAM
+  PUBLIC "$<BUILD_INTERFACE:${PROJECT_SOURCE_DIR}/include>"
+         "$<INSTALL_INTERFACE:${CMAKE_INSTALL_FULL_INCLUDEDIR}>"
+         ${MPI_CXX_INCLUDE_PATH})
 
 target_sources(
   NeoFOAM
@@ -35,4 +37,5 @@ if(${CMAKE_BUILD_TYPE} MATCHES RelWithDebInfo)
   target_compile_definitions(NeoFOAM INTERFACE NF_DEBUG_INFO)
 endif()
 
-target_link_libraries(NeoFOAM PRIVATE Kokkos::kokkos cpptrace::cpptrace)
+target_link_libraries(NeoFOAM PRIVATE cpptrace::cpptrace Kokkos::kokkos
+                                      ${MPI_CXX_LIBRARIES})
