--- a/test/core/CMakeLists.txt
+++ b/test/core/CMakeLists.txt
@@ -1,6 +1,8 @@
 # SPDX-License-Identifier: Unlicense
 # SPDX-FileCopyrightText: 2024 NeoFOAM authors
 
+add_subdirectory(mpi)
+
 add_test(NAME dictionary_test COMMAND test_dictionary)
 add_executable(test_dictionary "test_Dictionary.cpp" "../test_main.cpp")
 target_link_libraries(test_dictionary PRIVATE Catch2::Catch2 NeoFOAM
