--- a/test/core/CMakeLists.txt
+++ b/test/core/CMakeLists.txt
@@ -10,5 +10,12 @@ target_link_libraries(test_dictionary PRIVATE Catch2::Catch2 cpptrace::cpptrace
 
 add_test(NAME executor_test COMMAND test_executor)
 add_executable(test_executor "test_Executor.cpp" "../test_main.cpp")
-target_link_libraries(test_executor PRIVATE Catch2::Catch2 cpptrace::cpptrace
-                                            NeoFOAM)
+
+target_link_libraries(test_executor PRIVATE Catch2::Catch2 NeoFOAM
+                                            cpptrace::cpptrace
+                                            Kokkos::kokkos)
+
+add_test(NAME registerClass_test COMMAND test_registerClass)
+add_executable(test_registerClass "test_RegisterClass.cpp" "../test_main.cpp")
+target_link_libraries(test_registerClass PRIVATE Catch2::Catch2 NeoFOAM
+                                                 Kokkos::kokkos)
