--- a/test/finiteVolume/CMakeLists.txt
+++ b/test/finiteVolume/CMakeLists.txt
@@ -4,11 +4,13 @@
 add_test(NAME SurfaceField_test COMMAND test_SurfaceField)
 add_executable(test_SurfaceField "cellCentred/fields/surfaceField.cpp"
                                  "../test_main.cpp")
-target_link_libraries(test_SurfaceField PRIVATE Catch2::Catch2 NeoFOAM
-                                                Kokkos::kokkos)
+target_link_libraries(
+  test_SurfaceField PRIVATE Catch2::Catch2 NeoFOAM Kokkos::kokkos
+                            cpptrace::cpptrace)
 
 add_test(NAME VolummeField_test COMMAND test_VolumeField)
 add_executable(test_VolumeField "cellCentred/fields/volumeField.cpp"
                                 "../test_main.cpp")
-target_link_libraries(test_VolumeField PRIVATE Catch2::Catch2 NeoFOAM
-                                               Kokkos::kokkos)
+target_link_libraries(
+  test_VolumeField PRIVATE Catch2::Catch2 NeoFOAM Kokkos::kokkos
+                           cpptrace::cpptrace)
