- renamed operations to operators. - added test_operators.cpp, tested basic functionality. - a number of functions tested.

--- a/test/core/mpi/CMakeLists.txt
+++ b/test/core/mpi/CMakeLists.txt
@@ -1,7 +1,8 @@
 # SPDX-License-Identifier: MIT
 # SPDX-FileCopyrightText: 2023 NeoFOAM authors
 
-add_test(NAME test_mpi COMMAND test_mpi)
-add_executable(test_mpi "test_mpi.cpp" "../../test_main.cpp")
-target_link_libraries(test_mpi PRIVATE Catch2::Catch2 NeoFOAM Kokkos::kokkos
-                                       cpptrace::cpptrace ${MPI_CXX_LIBRARIES})
+add_test(NAME test_operators COMMAND test_operators)
+add_executable(test_operators "test_operators.cpp" "../../test_main.cpp")
+target_link_libraries(
+  test_operators PRIVATE Catch2::Catch2 NeoFOAM Kokkos::kokkos
+                         cpptrace::cpptrace ${MPI_CXX_LIBRARIES})
