--- a/test/core/mpi/CMakeLists.txt
+++ b/test/core/mpi/CMakeLists.txt
@@ -3,6 +3,5 @@
 
 add_test(NAME test_operators COMMAND test_operators)
 add_executable(test_operators "test_operators.cpp" "../../test_main.cpp")
-target_link_libraries(
-  test_operators PRIVATE Catch2::Catch2 NeoFOAM Kokkos::kokkos
-                         cpptrace::cpptrace)
+target_link_libraries(test_operators PRIVATE Catch2::Catch2 cpptrace::cpptrace
+                                             NeoFOAM)
