--- a/test/core/CMakeLists.txt
+++ b/test/core/CMakeLists.txt
@@ -5,12 +5,10 @@ add_subdirectory(mpi)
 
 add_test(NAME dictionary_test COMMAND test_dictionary)
 add_executable(test_dictionary "test_Dictionary.cpp" "../test_main.cpp")
-target_link_libraries(
-  test_dictionary PRIVATE Catch2::Catch2 NeoFOAM ${MPI_CXX_LIBRARIES}
-                          Kokkos::kokkos cpptrace::cpptrace)
+target_link_libraries(test_dictionary PRIVATE Catch2::Catch2 cpptrace::cpptrace
+                                              NeoFOAM)
 
 add_test(NAME executor_test COMMAND test_executor)
 add_executable(test_executor "test_Executor.cpp" "../test_main.cpp")
-target_link_libraries(
-  test_executor PRIVATE Catch2::Catch2 NeoFOAM ${MPI_CXX_LIBRARIES}
-                        Kokkos::kokkos cpptrace::cpptrace)
+target_link_libraries(test_executor PRIVATE Catch2::Catch2 cpptrace::cpptrace
+                                            NeoFOAM)
