--- a/test/fields/CMakeLists.txt
+++ b/test/fields/CMakeLists.txt
@@ -3,9 +3,10 @@
 
 add_test(NAME field_test COMMAND test_Field)
 add_executable(test_Field "test_Field.cpp" "../test_main.cpp")
-target_link_libraries(test_Field PRIVATE Catch2::Catch2 NeoFOAM Kokkos::kokkos)
+target_link_libraries(test_Field PRIVATE Catch2::Catch2 cpptrace::cpptrace
+                                         NeoFOAM)
 
 add_test(NAME domain_field_test COMMAND test_DomainField)
 add_executable(test_DomainField "test_DomainField.cpp" "../test_main.cpp")
-target_link_libraries(test_DomainField PRIVATE Catch2::Catch2 NeoFOAM
-                                               Kokkos::kokkos)
+target_link_libraries(test_DomainField PRIVATE Catch2::Catch2
+                                               cpptrace::cpptrace NeoFOAM)
