--- a/test/core/CMakeLists.txt
+++ b/test/core/CMakeLists.txt
@@ -18,4 +18,4 @@ target_link_libraries(test_executor PRIVATE Catch2::Catch2 NeoFOAM
 add_test(NAME registerClass_test COMMAND test_registerClass)
 add_executable(test_registerClass "test_RegisterClass.cpp" "../test_main.cpp")
 target_link_libraries(test_registerClass PRIVATE Catch2::Catch2 NeoFOAM
-                                                 Kokkos::kokkos)
+                                                  cpptrace::cpptrace Kokkos::kokkos)
