--- a/test/finiteVolume/cellCentred/boundary/CMakeLists.txt
+++ b/test/finiteVolume/cellCentred/boundary/CMakeLists.txt
@@ -1,5 +1,5 @@
 # SPDX-License-Identifier: Unlicense
 # SPDX-FileCopyrightText: 2024 NeoFOAM authors
 
-neofoamunittest(fixedValue)
-neofoamunittest(fixedGradient)
+neofoam_unit_test(fixedValue)
+neofoam_unit_test(fixedGradient)
