- split buffer into half and full duplex buffer variants. - half duplex buffer tested. - moved some functions of half duplex into .cpp - MPI environment updated. - spacing changes in opertors.hpp

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -11,7 +11,8 @@ target_include_directories(
 
 target_sources(
   NeoFOAM
-  PRIVATE "core/time.cpp"
+  PRIVATE "core/mpi/halfDuplexBuffer.cpp"
+          "core/time.cpp"
           "core/dictionary.cpp"
           "core/kokkos.cpp"
           "executor/OMPExecutor.cpp"
