--- a/test/finiteVolume/CMakeLists.txt
+++ b/test/finiteVolume/CMakeLists.txt
@@ -2,11 +2,9 @@
 # SPDX-FileCopyrightText: 2024 NeoFOAM authors
 
 add_test(NAME SurfaceField_test COMMAND test_SurfaceField)
-add_executable(test_SurfaceField "cellCentred/fields/surfaceField.cpp"
-                                 "../test_main.cpp")
-target_link_libraries(
-  test_SurfaceField PRIVATE Catch2::Catch2 NeoFOAM Kokkos::kokkos
-                            cpptrace::cpptrace)
+add_executable(test_SurfaceField "cellCentred/fields/surfaceField.cpp" "../test_main.cpp")
+target_link_libraries(test_SurfaceField PRIVATE Catch2::Catch2 NeoFOAM Kokkos::kokkos
+                                                cpptrace::cpptrace)
 
 add_test(NAME VolumeField_test COMMAND test_VolumeField)
 add_executable(test_VolumeField "cellCentred/fields/volumeField.cpp"
