--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -3,11 +3,13 @@
 # add_subdirectory(DSL)
 
 add_library(NeoFOAM)
+
+set_property(TARGET NeoFOAM PROPERTY POSITION_INDEPENDENT_CODE ON)
+
 include(GNUInstallDirs)
 
-target_include_directories(
-  NeoFOAM PUBLIC "$<BUILD_INTERFACE:${PROJECT_SOURCE_DIR}/include>"
-                 "$<INSTALL_INTERFACE:${CMAKE_INSTALL_FULL_INCLUDEDIR}>")
+target_include_directories(NeoFOAM PUBLIC "$<BUILD_INTERFACE:${PROJECT_SOURCE_DIR}/include>"
+                                          "$<INSTALL_INTERFACE:${CMAKE_INSTALL_FULL_INCLUDEDIR}>")
 
 target_sources(
   NeoFOAM
@@ -24,9 +26,8 @@ target_sources(
 
 include(${CMAKE_SOURCE_DIR}/cmake/Sanitizer.cmake)
 enable_sanitizers(
-  NeoFOAM NEOFOAM_ENABLE_SANITIZE_ADDRESS NEOFOAM_ENABLE_SANITIZE_LEAK
-  NEOFOAM_ENABLE_SANITIZE_UB NEOFOAM_ENABLE_SANITIZE_THREAD
-  NEOFOAM_ENABLE_SANITIZE_MEMORY)
+  NeoFOAM NEOFOAM_ENABLE_SANITIZE_ADDRESS NEOFOAM_ENABLE_SANITIZE_LEAK NEOFOAM_ENABLE_SANITIZE_UB
+  NEOFOAM_ENABLE_SANITIZE_THREAD NEOFOAM_ENABLE_SANITIZE_MEMORY)
 
 if(${CMAKE_BUILD_TYPE} MATCHES Debug)
   target_compile_definitions(NeoFOAM INTERFACE NF_DEBUG)
