--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -8,9 +8,6 @@ set_property(TARGET NeoFOAM PROPERTY POSITION_INDEPENDENT_CODE ON)
 
 include(GNUInstallDirs)
 
-target_include_directories(NeoFOAM PUBLIC "$<BUILD_INTERFACE:${PROJECT_SOURCE_DIR}/include>"
-                                          "$<INSTALL_INTERFACE:${CMAKE_INSTALL_FULL_INCLUDEDIR}>")
-
 target_sources(
   NeoFOAM
   PRIVATE "core/time.cpp"
@@ -37,4 +34,7 @@ if(${CMAKE_BUILD_TYPE} MATCHES RelWithDebInfo)
   target_compile_definitions(NeoFOAM INTERFACE NF_DEBUG_INFO)
 endif()
 
-target_link_libraries(NeoFOAM PRIVATE Kokkos::kokkos cpptrace::cpptrace)
+target_link_libraries(
+  NeoFOAM
+  PUBLIC NeoFOAM_public_api
+  PRIVATE Kokkos::kokkos cpptrace::cpptrace)
