make scalar and label size an interface propety

--- a/include/CMakeLists.txt
+++ b/include/CMakeLists.txt
@@ -2,6 +2,14 @@
 # SPDX-FileCopyrightText: 2023 NeoFOAM authors
 
 add_library(NeoFOAM_public_api INTERFACE) # dummy target
+
+if(${NEOFOAM_DP_SCALAR})
+  target_compile_definitions(NeoFOAM_public_api PUBLIC NEOFOAM_DP_SCALAR=1)
+endif()
+if(${NEOFOAM_DP_LABEL})
+  target_compile_definitions(NeoFOAM_public_api PUBLIC NEOFOAM_DP_LABEL=1)
+endif()
+
 set_property(
   TARGET NeoFOAM_public_api
   APPEND
