--- a/test/core/CMakeLists.txt
+++ b/test/core/CMakeLists.txt
@@ -10,3 +10,8 @@ add_test(NAME executor_test COMMAND test_executor)
 add_executable(test_executor "test_Executor.cpp" "../test_main.cpp")
 target_link_libraries(test_executor PRIVATE Catch2::Catch2 NeoFOAM
                                             Kokkos::kokkos)
+
+add_test(NAME register_test COMMAND test_RegisterClass)
+add_executable(test_RegisterClass "test_RegisterClass.cpp" "../test_main.cpp")
+target_link_libraries(test_RegisterClass PRIVATE Catch2::Catch2 NeoFOAM
+                                                 Kokkos::kokkos)
