--- a/include/CMakeLists.txt
+++ b/include/CMakeLists.txt
@@ -4,10 +4,10 @@
 add_library(NeoFOAM_public_api INTERFACE) # dummy target
 
 if(${NEOFOAM_DP_SCALAR})
-  target_compile_definitions(NeoFOAM_public_api PUBLIC NEOFOAM_DP_SCALAR=1)
+  target_compile_definitions(NeoFOAM_public_api INTERFACE NEOFOAM_DP_SCALAR=1)
 endif()
 if(${NEOFOAM_DP_LABEL})
-  target_compile_definitions(NeoFOAM_public_api PUBLIC NEOFOAM_DP_LABEL=1)
+  target_compile_definitions(NeoFOAM_public_api INTERFACE NEOFOAM_DP_LABEL=1)
 endif()
 
 set_property(
