--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -47,7 +47,9 @@ jobs:
            libomp-16-dev \
            python3 \
            python3-dev \
-           build-essential
+           build-essential \
+           libopenmpi-dev \
+           openmpi-bin
          sudo apt remove clang-14
          sudo rm /usr/bin/clang
          sudo rm /usr/bin/clang++
