- added mpi to IWYU

--- a/.github/workflows/static_checks.yaml
+++ b/.github/workflows/static_checks.yaml
@@ -24,7 +24,9 @@ jobs:
            ninja-build \
            iwyu \
            clang-16 \
-           libomp-16-dev
+           libomp-16-dev \
+           libopenmpi-dev \
+           openmpi-bin
 
     - name: Create Compilation Database
       run: |
