--- a/.github/workflows/static_checks.yaml
+++ b/.github/workflows/static_checks.yaml
@@ -58,7 +58,9 @@ jobs:
         sudo apt update
         sudo apt install \
            clang-tidy-16 \
-           libomp-16-dev
+           libomp-16-dev \
+           libopenmpi-dev \
+           openmpi-bin
 
     - uses: actions/download-artifact@v4
       with:
