--- a/test/mesh/unstructured/CMakeLists.txt
+++ b/test/mesh/unstructured/CMakeLists.txt
@@ -5,3 +5,7 @@ add_test(NAME test_communicator COMMAND test_communicator)
 add_executable(test_communicator "test_communicator.cpp" "../../test_main.cpp")
 target_link_libraries(test_communicator PRIVATE Catch2::Catch2
                                                 cpptrace::cpptrace NeoFOAM)
+
+add_test(NAME field_mesh COMMAND test_mesh)
+add_executable(test_mesh "unstructuredMesh.cpp" "../test_main.cpp")
+target_link_libraries(test_mesh PRIVATE Catch2::Catch2 NeoFOAM Kokkos::kokkos)
