--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -12,6 +12,7 @@ target_sources(
           "core/time.cpp"
           "core/dictionary.cpp"
           "core/kokkos.cpp"
+          "core/schema/Number.cpp"
           "executor/OMPExecutor.cpp"
           "executor/GPUExecutor.cpp"
           "executor/CPUExecutor.cpp"
