--- a/test/finiteVolume/CMakeLists.txt
+++ b/test/finiteVolume/CMakeLists.txt
@@ -11,7 +11,13 @@ add_executable(test_VolumeField "cellCentred/fields/volumeField.cpp" "../test_ma
 target_link_libraries(test_VolumeField PRIVATE Catch2::Catch2 NeoFOAM Kokkos::kokkos
                                                cpptrace::cpptrace)
 
-add_test(NAME boundaryField_test COMMAND test_boundaryField)
-add_executable(test_boundaryField "cellCentred/fields/boundary/fixedValue.cpp" "../test_main.cpp")
-target_link_libraries(test_boundaryField PRIVATE Catch2::Catch2 NeoFOAM Kokkos::kokkos
+add_test(NAME fixedValue_test COMMAND test_fixedValue)
+add_executable(test_fixedValue "cellCentred/fields/boundary/fixedValue.cpp" "../test_main.cpp")
+target_link_libraries(test_fixedValue PRIVATE Catch2::Catch2 NeoFOAM Kokkos::kokkos
+                                              cpptrace::cpptrace)
+
+add_test(NAME fixedGradient_test COMMAND test_fixedGradient)
+add_executable(test_fixedGradient "cellCentred/fields/boundary/fixedGradient.cpp"
+                                  "../test_main.cpp")
+target_link_libraries(test_fixedGradient PRIVATE Catch2::Catch2 NeoFOAM Kokkos::kokkos
                                                  cpptrace::cpptrace)
