--- a/.github/workflows/build_on_aws.yml
+++ b/.github/workflows/build_on_aws.yml
@@ -91,7 +91,7 @@ jobs:
       id-token: write
       contents: read
     # only try to run the stop job if the start runner hasn't been skipped
-    if: ${{ needs.start-runner.result != 'skipped' && needs.build-on-aws.result != 'skipped' }}
+    if: ${{ needs.build-on-aws.result == 'failure' || needs.build-on-aws.result == 'success' }}
     steps:
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v4
