add missing attrs dep

--- a/.github/workflows/static_checks.yaml
+++ b/.github/workflows/static_checks.yaml
@@ -116,7 +116,7 @@ jobs:
         uses: actions/checkout@v4
       - name: install reuse linter
         run: |
-          pip3 install reuse
+          pip3 install reuse attrs
       - name: Execute reuse linter
         run: |
           reuse lint
