Implement fixedGradient test

--- a/include/CMakeLists.txt
+++ b/include/CMakeLists.txt
@@ -2,10 +2,13 @@
 # SPDX-FileCopyrightText: 2023 NeoFOAM authors
 
 add_library(NeoFOAM_public_api INTERFACE) # dummy target
+
 set_property(
   TARGET NeoFOAM_public_api
   APPEND
   PROPERTY INTERFACE_INCLUDE_DIRECTORIES "${CMAKE_CURRENT_SOURCE_DIR}")
 
-set_property(TARGET NeoFOAM_public_api APPEND PROPERTY INTERFACE_INCLUDE_DIRECTORIES
-                                                       "${CMAKE_CURRENT_BINARY_DIR}")
+set_property(
+  TARGET NeoFOAM_public_api
+  APPEND
+  PROPERTY INTERFACE_INCLUDE_DIRECTORIES "${CMAKE_CURRENT_BINARY_DIR}")
