--- a/test/finiteVolume/CMakeLists.txt
+++ b/test/finiteVolume/CMakeLists.txt
@@ -12,12 +12,11 @@ target_link_libraries(test_VolumeField PRIVATE Catch2::Catch2 NeoFOAM Kokkos::ko
                                                cpptrace::cpptrace)
 
 add_test(NAME fixedValue_test COMMAND test_fixedValue)
-add_executable(test_fixedValue "cellCentred/fields/boundary/fixedValue.cpp" "../test_main.cpp")
+add_executable(test_fixedValue "cellCentred/boundary/fixedValue.cpp" "../test_main.cpp")
 target_link_libraries(test_fixedValue PRIVATE Catch2::Catch2 NeoFOAM Kokkos::kokkos
                                               cpptrace::cpptrace)
 
 add_test(NAME fixedGradient_test COMMAND test_fixedGradient)
-add_executable(test_fixedGradient "cellCentred/fields/boundary/fixedGradient.cpp"
-                                  "../test_main.cpp")
+add_executable(test_fixedGradient "cellCentred/boundary/fixedGradient.cpp" "../test_main.cpp")
 target_link_libraries(test_fixedGradient PRIVATE Catch2::Catch2 NeoFOAM Kokkos::kokkos
                                                  cpptrace::cpptrace)
