--- a/test/fields/CMakeLists.txt
+++ b/test/fields/CMakeLists.txt
@@ -1,5 +1,5 @@
 # SPDX-License-Identifier: Unlicense
 # SPDX-FileCopyrightText: 2024 NeoFOAM authors
 
-NeoFOAMUnitTest(field)
-NeoFOAMUnitTest(domainField)
+neofoamunittest(field)
+neofoamunittest(domainField)
