--- a/test/mesh/unstructured/CMakeLists.txt
+++ b/test/mesh/unstructured/CMakeLists.txt
@@ -1,5 +1,5 @@
 # SPDX-License-Identifier: Unlicense
 # SPDX-FileCopyrightText: 2023-2024 NeoFOAM authors
 
-NeoFOAMUnitTest(communicator)
-NeoFOAMUnitTest(unstructuredMesh)
+neofoamunittest(communicator)
+neofoamunittest(unstructuredMesh)
