--- a/test/core/mpi/CMakeLists.txt
+++ b/test/core/mpi/CMakeLists.txt
@@ -1,5 +1,5 @@
 # SPDX-License-Identifier: MIT
 # SPDX-FileCopyrightText: 2023 NeoFOAM authors
 
-neofoam_unit_test(fullDuplexCommBuffer)
-neofoam_unit_test(halfDuplexCommBuffer)
+neofoam_unit_test(fullDuplexCommBuffer MPI_SIZE 3)
+neofoam_unit_test(halfDuplexCommBuffer MPI_SIZE 3)
