--- a/.github/workflows/build_on_aws.yml
+++ b/.github/workflows/build_on_aws.yml
@@ -71,7 +71,9 @@ jobs:
           module load libfabric-aws
           module load cmake
           cmake --version
-          cmake --preset ninja-kokkos-cuda-all -DNEOFOAM_DEVEL_TOOLS=OFF
+          cmake --preset ninja-kokkos-cuda-all \
+            -DNEOFOAM_DEVEL_TOOLS=OFF \
+           -DNEOFOAM_ENABLE_MPI_WITH_THREAD_SUPPORT=OFF
           cmake --build --preset ninja-kokkos-cuda-all
       - name: Test NeoFOAM
         shell: bash -i {0}
