--- a/.github/workflows/static_checks.yaml
+++ b/.github/workflows/static_checks.yaml
@@ -34,6 +34,7 @@ jobs:
           -DNEOFOAM_DEVEL_TOOLS=OFF \
           -DCMAKE_CXX_COMPILER=clang++-16 \
           -DCMAKE_EXPORT_COMPILE_COMMANDS=ON \
+           -DNEOFOAM_ENABLE_MPI_WITH_THREAD_SUPPORT=OFF \
           -DNEOFOAM_ENABLE_IWYU=ON
         cmake --build --preset ninja-cpuonly-all
     - uses: actions/upload-artifact@v4
