--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -67,7 +67,9 @@ jobs:
        run: |
          CC=${{matrix.compiler.CC}} \
          CXX=${{matrix.compiler.CXX}} \
-         cmake --preset ninja-cpuonly-all -DNEOFOAM_DEVEL_TOOLS=OFF
+         cmake --preset ninja-cpuonly-all \
+           -DNEOFOAM_DEVEL_TOOLS=OFF \
+           -DNEOFOAM_ENABLE_MPI_WITH_THREAD_SUPPORT=OFF
          cmake --build  --preset ninja-cpuonly-all
 
      - name: Execute unit tests NeoFOAM
