--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -38,6 +38,7 @@ option(NEOFOAM_ENABLE_CPP_CHECK "Enable cpp check static analyzer" FALSE)
 option(NEOFOAM_ENABLE_CLANG_TIDY "Enable clang tidy static analyzer" FALSE)
 option(NEOFOAM_ENABLE_PCH "Enable precompiled header" FALSE)
 option(NEOFOAM_ENABLE_IWYU "Enable iwyu checks" FALSE)
+option(NEOFOAM_ENABLE_MPI_WITH_THREAD_SUPPORT "Enable " TRUE)
 
 if(NOT DEFINED CPM_USE_LOCAL_PACKAGES)
   message(STATUS "Set CPM_USE_LOCAL_PACKAGES=ON by default.")
@@ -96,6 +97,9 @@ if(${NEOFOAM_DP_SCALAR})
 endif()
 if(${NEOFOAM_DP_LABEL})
   target_compile_definitions(NeoFOAM PUBLIC NEOFOAM_DP_LABEL=1)
+endif()
+if(${NEOFOAM_ENABLE_MPI_WITH_THREAD_SUPPORT})
+  target_compile_definitions(NeoFOAM PUBLIC NEOFOAM_MPI_THREAD=1)
 endif()
 
 if(NEOFOAM_BUILD_DOC)
