--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -11,6 +11,9 @@ on:
   schedule:
     - cron: "* 0 * * 0"
 
+env:
+  CTEST_OUTPUT_ON_FAILURE: 1
+
 concurrency:
   group: ${{ github.workflow }}-${{ github.event.pull_request.number || github.ref }}
   cancel-in-progress: true
