--- a/.github/workflows/build_doc.yaml
+++ b/.github/workflows/build_doc.yaml
@@ -5,6 +5,9 @@ on:
     branches:
       - main
     types: [closed, synchronize, opened]
+ push:
+    tags:
+       - v*
 
 jobs:
   build:
@@ -22,13 +25,20 @@ jobs:
         sphinx-build -b html ./doc ./docs_build/
         cd docs_build
         touch .nojekyll
-    - name: Deploy Test Build
+    - name: Deploy PR Build
       uses: JamesIves/github-pages-deploy-action@v4
       with:
         folder: docs_build
-        target-folder: test_build
-    - name: Deploy Build
+        target-folder: Build_PR_${{ env.PR_NUMBER }}
+    - name: Deploy Versioned Build
+      if: ${{ github.ref_type == 'tag'}}
+      uses: JamesIves/github-pages-deploy-action@v4
+      with:
+        folder: docs_build
+        target-folder: ${{ github.ref_name }}
+    - name: Deploy Latest Build
       if: ${{ github.event.pull_request.merged }}
       uses: JamesIves/github-pages-deploy-action@v4
       with:
         folder: docs_build
+        target-folder: latest
