added parallelFor and parallelReduce

--- a/test/core/CMakeLists.txt
+++ b/test/core/CMakeLists.txt
@@ -6,3 +6,4 @@ add_subdirectory(mpi)
 neofoamunittest(dictionary)
 neofoamunittest(executor)
 neofoamunittest(registerClass)
+neofoamunittest(parallelAlgorithms)
