- renamed reduceAllScalar to allReduce - added vector version of allReduce - reintroduced all reduce tests.

--- a/test/core/mpi/CMakeLists.txt
+++ b/test/core/mpi/CMakeLists.txt
@@ -3,3 +3,4 @@
 
 neofoam_unit_test(fullDuplexCommBuffer MPI_SIZE 3)
 neofoam_unit_test(halfDuplexCommBuffer MPI_SIZE 3)
+neofoam_unit_test(operators MPI_SIZE 3)
