--- a/test/finiteVolume/cellCentred/boundary/CMakeLists.txt
+++ b/test/finiteVolume/cellCentred/boundary/CMakeLists.txt
@@ -1,5 +1,8 @@
 # SPDX-License-Identifier: Unlicense
 # SPDX-FileCopyrightText: 2024 NeoFOAM authors
 
-neofoam_unit_test(fixedValue)
-neofoam_unit_test(fixedGradient)
+neofoam_unit_test(volFixedValue)
+neofoam_unit_test(volFixedGradient)
+
+neofoam_unit_test(surfFixedValue)
+neofoam_unit_test(surfFixedGradient)
