- moved compile definitions of neoFOAM to root CMakeLists.txt. - by default turned MPI threading support off.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -38,7 +38,7 @@ option(NEOFOAM_ENABLE_CPP_CHECK "Enable cpp check static analyzer" FALSE)
 option(NEOFOAM_ENABLE_CLANG_TIDY "Enable clang tidy static analyzer" FALSE)
 option(NEOFOAM_ENABLE_PCH "Enable precompiled header" FALSE)
 option(NEOFOAM_ENABLE_IWYU "Enable iwyu checks" FALSE)
-option(NEOFOAM_ENABLE_MPI_WITH_THREAD_SUPPORT "Enable " TRUE)
+option(NEOFOAM_ENABLE_MPI_WITH_THREAD_SUPPORT "Enable " FALSE)
 
 if(NOT DEFINED CPM_USE_LOCAL_PACKAGES)
   message(STATUS "Set CPM_USE_LOCAL_PACKAGES=ON by default.")
@@ -98,7 +98,15 @@ if(${NEOFOAM_DP_LABEL})
   target_compile_definitions(NeoFOAM PUBLIC NEOFOAM_DP_LABEL=1)
 endif()
 if(${NEOFOAM_ENABLE_MPI_WITH_THREAD_SUPPORT})
-  target_compile_definitions(NeoFOAM PUBLIC NEOFOAM_MPI_THREAD=1)
+  target_compile_definitions(NeoFOAM INTERFACE NF_REQUIRE_MPI_THREAD_SUPPORT)
+endif()
+
+if(${CMAKE_BUILD_TYPE} MATCHES Debug)
+  target_compile_definitions(NeoFOAM INTERFACE NF_DEBUG)
+endif()
+
+if(${CMAKE_BUILD_TYPE} MATCHES RelWithDebInfo)
+  target_compile_definitions(NeoFOAM INTERFACE NF_DEBUG_INFO)
 endif()
 
 if(NEOFOAM_BUILD_DOC)
