update boundary conditions and tests

--- a/test/finiteVolume/cellCentred/boundary/volume/CMakeLists.txt
+++ b/test/finiteVolume/cellCentred/boundary/volume/CMakeLists.txt
@@ -1,5 +1,5 @@
 # SPDX-License-Identifier: Unlicense
 # SPDX-FileCopyrightText: 2024 NeoFOAM authors
 
-add_subdirectory(volume)
-add_subdirectory(surface)
+neofoam_unit_test(volFixedValue)
+neofoam_unit_test(volFixedGradient)
