--- a/test/finiteVolume/cellCentred/boundary/surface/CMakeLists.txt
+++ b/test/finiteVolume/cellCentred/boundary/surface/CMakeLists.txt
@@ -1,5 +1,4 @@
 # SPDX-License-Identifier: Unlicense
 # SPDX-FileCopyrightText: 2024 NeoFOAM authors
 
-add_subdirectory(volume)
-add_subdirectory(surface)
+neofoam_unit_test(surfFixedValue)
