--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -21,7 +21,13 @@ target_sources(
           "mesh/unstructured/unstructuredMesh.cpp"
           "mesh/stencil/stencilDataBase.cpp"
           "mesh/stencil/stencilDataBase.cpp"
-          "finiteVolume/cellCentred/boundary/boundary.cpp")
+          "mesh/stencil/fvccGeometryScheme.cpp"
+          "mesh/stencil/basicFvccGeometryScheme.cpp"
+          "finiteVolume/cellCentred/boundary/boundary.cpp"
+          "finiteVolume/cellCentred/operators/gaussGreenGrad.cpp"
+          "finiteVolume/cellCentred/operators/gaussGreenDiv.cpp"
+          "finiteVolume/cellCentred/interpolation/linear.cpp"
+          "finiteVolume/cellCentred/interpolation/upwind.cpp")
 
 include(${CMAKE_SOURCE_DIR}/cmake/Sanitizer.cmake)
 enable_sanitizers(
