--- a/include/CMakeLists.txt
+++ b/include/CMakeLists.txt
@@ -12,3 +12,11 @@ set_property(
   TARGET NeoFOAM_public_api
   APPEND
   PROPERTY INTERFACE_INCLUDE_DIRECTORIES "${CMAKE_CURRENT_BINARY_DIR}")
+
+if(${CMAKE_BUILD_TYPE} MATCHES Debug)
+  target_compile_definitions(NeoFOAM_public_api INTERFACE NF_DEBUG)
+endif()
+
+if(${CMAKE_BUILD_TYPE} MATCHES RelWithDebInfo)
+  target_compile_definitions(NeoFOAM_public_api INTERFACE NF_DEBUG_INFO)
+endif()
