[cmake] add option to enable warnings

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -39,6 +39,8 @@ option(NEOFOAM_ENABLE_CLANG_TIDY "Enable clang tidy static analyzer" FALSE)
 option(NEOFOAM_ENABLE_PCH "Enable precompiled header" FALSE)
 option(NEOFOAM_ENABLE_IWYU "Enable iwyu checks" FALSE)
 option(NEOFOAM_ENABLE_MPI_WITH_THREAD_SUPPORT "Enable " FALSE)
+option(NEOFOAM_ENABLE_WARNINGS "Treat compiler warnings as errors" OFF)
+mark_as_advanced(NEOFOAM_ENABLE_WARNINGS)
 
 if(NOT DEFINED CPM_USE_LOCAL_PACKAGES)
   message(STATUS "Set CPM_USE_LOCAL_PACKAGES=ON by default.")
@@ -64,12 +66,14 @@ include(cmake/CompilerWarnings.cmake)
 include(cmake/Sanitizer.cmake)
 include(cmake/StaticAnalyzers.cmake)
 
-add_library(project_options INTERFACE)
-add_library(project_warnings INTERFACE)
-myproject_set_project_warnings(project_warnings ${myproject_WARNINGS_AS_ERRORS} FALSE "" "" "")
+add_library(neofoam_options INTERFACE)
+add_library(neofoam_warnings INTERFACE)
+if(NEOFOAM_ENABLE_WARNINGS)
+  neofoam_set_project_warnings(neofoam_warnings ${NEOFOAM_WARNINGS_AS_ERRORS} "" "" "")
+endif()
 
 if(NEOFOAM_BUILD_PCH)
-  target_precompile_headers(project_options INTERFACE <vector> <string> <utility>)
+  target_precompile_headers(neofoam_options INTERFACE <vector> <string> <utility>)
 endif()
 
 if(NEOFOAM_ENABLE_CPP_CHECK)
